--- a/src/index.jade
+++ b/src/index.jade
@@ -16,20 +16,8 @@ html
 
 			section
 				h1 Go
-
-			section
-				h2 Small
-				ul
-					li 
-
-			section
-				h2 Static typing
-
-			section
-				h2 Ultra fast compilation
-
-			section
-				h2 multiple return values
+				h2 A great language for modern web applications
+				p @sebasporto
 
 			section
 				h2 Speed
@@ -51,18 +39,177 @@ html
 						});
 
 			section
-				h2 Concurrency - Doing things in parallel
+				h2 Concurrency - Parallel requests
+				hr
+				p Image here
+
+			section
+				h3 Concurrency - Parallel requests
+				h2 Ruby
+				hr
+				ul
+					li Mutex :(
+					li EventMachine :(
+
+			section
+				h3 Concurrency - Parallel requests
+				h2 Node.js
 				hr
 				code.language-javascript
 					pre.
-						bespoke.horizontal.from('article', {
-							bullets: 'li, .bullet',
-							hash: true,
-							state: true
-						});
+						var defX = Q.defer();
+						var defY = Q.defer();
+
+						var oneAndTwo = Q
+							.all([defX.promise, defY.promise])
+							.then(processConcat);
+
+						requestValue('/x', defX);
+						requestValue('/y', defY);
 
 			section
-				h2 Concurrency - Memory
+				h3 Concurrency - Parallel requests
+				h2 Go
+				hr
+				code.language-clike
+					pre.
+						var cx chan string = make(chan string)
+						var cy chan string = make(chan string)
+
+						go requestValue("/x", cx)
+						go requestValue("/y", cy)
+
+						x := <-cx
+						y := <-cy
+
+						processConcat(x, y)
+
+			section
+				h2 Concurrency - Memory Usage
+				p image here
+
+			section
+				h2 Node.js
+				h3 Concurrency - Memory Usage
+				hr
+				code.language-javascript
+					pre.
+						var http = require('http')
+						var Buffer = require('buffer').Buffer;
+						var n = 1024*1024;
+						var b = new Buffer(n);
+						for (var i = 0; i < n; i++) b[i] = 100;
+
+						http.createServer(function (req, res) {
+							res.writeHead(200);
+							res.end(b);
+						}).listen(8100);
+
+			section
+				h2 Node.js
+				h3 Concurrency - Memory
+				hr
+				code.language-bash
+					pre.
+						# Run benchmark
+						ab -n 10000 -c 100 http://127.0.0.1:8100/
+
+						# Very likely to get this
+						FATAL ERROR: (...) process out of memory
+
+			section
+				h2 Go
+				h3 Concurrency - Memory Usage
+				hr
+				code.language-clike
+					pre.
+						package main
+
+						import "net/http"
+						
+						func main() {
+							bytes := make([]byte, 1024*1024)
+							for i := 0; i < len(bytes); i++ {
+								bytes[i] = 100
+							}
+
+							http.HandleFunc("/", func(w http.ResponseWriter, r *http.Request) {
+								w.Write(bytes)
+							})
+							http.ListenAndServe(":8100", nil)
+						}
+
+			section
+				h2 Go
+				h3 Concurrency - Memory Usage
+				hr
+				code.language-bash
+					pre.
+						ab -n 10000 -c 100 http://127.0.0.1:8100/
+
+						...
+						Time taken for tests:   20.689 seconds
+						Complete requests:      10000
+						...
+
+						# IT WORKS!
+
+			section
+				h2 Simple
+				ul
+					li Small Core
+					li Easy to learn
+					li Flexible
+
+			section
+				h2 Static typing
+				h3 Yes this is useful!
+
+			section
+				h2 Static typing
+				h3 Developer efficiency - less tests
+				code.language-ruby
+					pre.
+						# ruby
+						it "doesn't blow up when I pass something unexpected" do
+							add(1, "two")
+						end
+
+			section
+				h2 Static typing 
+				h3 Without the ceremony
+				code.language-clike
+					pre.
+						# Java, C#
+						Circle c = new Circle(15);
+
+						# go
+						c := Circle{R: 15}
+
+			section
+				h2 Static typing
+				ul
+					li Faster - Compiler can go crazy with optimisations
+					li Easier to refactor
+
+			section
+				h2 Ultra Fast Compilation
+
+			section
+				h2 Multiple return values
+				h3 A sensible way not to mix return values and errors
+				code.language-ruby
+					pre.
+						# ruby
+						foo.add(1, "two") # should this return false? throw?
+
+						# go
+						res, err := add(x, y)
+
+			section
+				h2 Modern Standard Library
+				ul
+					li http included
 
 			section(data-bespoke-state='emphatic')
 				h2 It is awesome
@@ -73,4 +220,7 @@ html
 		script(src='bower_components/bespoke-hash/dist/bespoke-hash.min.js')
 		script(src='bower_components/bespoke-state/dist/bespoke-state.min.js')
 		script(src='bower_components/prism/prism.js')
+		script(src='scripts/prism.ruby.js')
+		script(src='bower_components/prism/components/prism-clike.js')
+		script(src='bower_components/prism/components/prism-bash.js')
 		script(src='scripts/main.js')
