--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -36,6 +36,7 @@ article
     right: 0
     overflow: hidden
     perspective: 600px
+    background-image: url(../images/bg1.png)
 
 .bespoke-slide
   transition: all slide_transition_length slide_transition_easing
@@ -53,7 +54,7 @@ article
   margin-top: (slide_height / 2) * -1
   left: 50%
   margin-left: (slide_width / 2) * -1
-  background: slide_background
+  //background: emphatic
   padding: 40px
   border-radius: 0
 
@@ -87,7 +88,7 @@ article
 
 .emphatic,
 .emphatic .bespoke-slide
-  background: slide_background
+  //background: slide_background
 
 // prism styles
 
@@ -127,6 +128,7 @@ ul
 
 li
   margin-bottom: 12px
+  font-size: 24px
 
 p
   margin: 0 100px 12px
@@ -135,3 +137,39 @@ p
 a
   color: #0093CC
   text-decoration: none
+
+.well
+	background: rgba(225, 225, 225, .8)
+	padding: 24px
+
+#speed-conclusion
+	figure
+		width: 400px
+		height: 250px
+		background-image: url(../images/forever-alone.gif)
+		background-size: 400px 250px
+		background-repeat: no-repeat
+
+#ruby-parallel
+	figure
+		width: 400px
+		height: 250px
+		background-image: url(../images/forever-alone.gif)
+		background-size: 400px 250px
+		background-repeat: no-repeat
+
+#memory-node
+	figure
+		width: 400px
+		height: 250px
+		background-image: url(../images/forever-alone.gif)
+		background-size: 400px 250px
+		background-repeat: no-repeat
+
+#memory-go
+	figure
+		width: 400px
+		height: 250px
+		background-image: url(../images/forever-alone.gif)
+		background-size: 400px 250px
+		background-repeat: no-repeat
