--- a/src/index.jade
+++ b/src/index.jade
@@ -23,8 +23,8 @@ html
 				h2 It is fast
 
 			section
-				h2 Ruby
 				h3 Speed
+				h2 Ruby
 				hr
 				code.language-ruby
 					pre.
@@ -46,9 +46,33 @@ html
 
 						bubble.call([2, 10, 1, 9, 5, 6, 8, 3, 7, 4])
 
+
 			section
-				h2 Go
 				h3 Speed
+				h2 JS
+				hr
+				code.language-javascript
+					pre.
+						function bubble(a) {
+							var swapped;
+							do {
+								swapped = false;
+								for(var i = 0; i < a.length - 1; i++) {
+									if(a[i] > a[i + 1]) {
+										var temp = a[i];
+										a[i] = a[i + 1];
+										a[i + 1] = temp;
+										swapped = true;
+									}
+								}
+							} while (swapped);
+						}
+
+						bubble([2, 10, 1, 9, 5, 6, 8, 3, 7, 4]);
+
+			section
+				h3 Speed
+				h2 Go
 				hr
 				code.language-clike
 					pre.
@@ -65,31 +89,42 @@ html
 						arr := []int{2, 10, 1, 9, 5, 6, 8, 3, 7, 4}
 						bubble(arr)
 
-			section
+			section#speed-conclusion
 				h2 Speed 
-				p Ran 5 000 000 times
+				hr
+				table.table
+					thead
+						tr
+							th
+							th Ns per op
+					tbody
+						tr
+							th Ruby
+							td 44,000
+						tr
+							th Go
+							td 357
 
 				hr
-
-				p Ruby - 44,000 ns/op
-				p Go -   357 ns/op
-
-				hr
-
 				h3 120x faster
+				hr
+				figure
 
 			section
 				h2 Concurrency - Parallel requests
 				hr
-				p Image here
+				img(src='images/parallel.png')
 
-			section
-				h3 Concurrency - Parallel requests
-				h2 Ruby
-				hr
-				ul
-					li Mutex :(
-					li EventMachine :(
+			section#ruby-parallel
+				div
+					h3 Concurrency - Parallel requests
+					h2 Ruby
+					hr
+					figure
+					hr
+					ul
+						li Mutex and Threads :(
+						li EventMachine :(
 
 			section
 				h3 Concurrency - Parallel requests
@@ -126,11 +161,11 @@ html
 
 			section
 				h2 Concurrency - Memory Usage
-				p image here
+				img(src='images/memory.png')
 
 			section
-				h2 Node.js
 				h3 Concurrency - Memory Usage
+				h2 Node.js
 				hr
 				code.language-javascript
 					pre.
@@ -145,9 +180,9 @@ html
 							res.end(b);
 						}).listen(8100);
 
-			section
+			section#memory-node
+				h3 Concurrency - Memory Usage
 				h2 Node.js
-				h3 Concurrency - Memory
 				hr
 				code.language-bash
 					pre.
@@ -156,10 +191,12 @@ html
 
 						# Very likely to get this
 						FATAL ERROR: (...) process out of memory
+				hr
+				figure
 
 			section
-				h2 Go
 				h3 Concurrency - Memory Usage
+				h2 Go
 				hr
 				code.language-clike
 					pre.
@@ -179,9 +216,9 @@ html
 							http.ListenAndServe(":8100", nil)
 						}
 
-			section
-				h2 Go
+			section#memory-go
 				h3 Concurrency - Memory Usage
+				h2 Go
 				hr
 				code.language-bash
 					pre.
@@ -193,6 +230,15 @@ html
 						...
 
 						# IT WORKS!
+				hr
+				figure
+
+			section(data-bespoke-state='emphatic')
+				h2 It is awesome
+				h3 Try it!
+
+			section(data-bespoke-state='emphatic')
+				h2 But there is a lot more ...
 
 			section
 				h2 Simple
@@ -228,6 +274,7 @@ html
 
 			section
 				h2 Static typing
+				hr
 				ul
 					li Faster - Compiler can go crazy with optimisations
 					li Easier to refactor
@@ -247,13 +294,32 @@ html
 						res, err := add(x, y)
 
 			section
+				h2 Imports
+				ul
+					li Embeded in the source code
+					li No need for gemfile, package.json, etc
+				hr
+				code.language-clike
+					pre.
+						import(
+							'github.com/sporto/something'
+						)
+
+			section
+				h2 Object system
+				hr
+				ul
+					li It is all composition
+					li Inferred
+
+			section
 				h2 Modern Standard Library
 				ul
-					li http included
+					li http
+					li Crypto
 
-			section(data-bespoke-state='emphatic')
-				h2 It is awesome
-				h3 Try it!
+			section
+				h2 Thanks
 
 		script(src='bower_components/bespoke.js/dist/bespoke.min.js')
 		script(src='bower_components/bespoke-bullets/dist/bespoke-bullets.min.js')
