--- a/src/index.jade
+++ b/src/index.jade
@@ -90,25 +90,12 @@ html
 						bubble(arr)
 
 			section#speed-conclusion
-				h2 Speed 
+				h2 It is fast! 
 				hr
-				table.table
-					thead
-						tr
-							th
-							th Ns per op
-					tbody
-						tr
-							th Ruby
-							td 44,000
-						tr
-							th Go
-							td 357
-
+				img(src="images/speed.png")
 				hr
-				h3 120x faster
 				hr
-				figure
+				h3 190x faster than Ruby
 
 			section
 				h2 Concurrency - Parallel requests
@@ -120,7 +107,7 @@ html
 					h3 Concurrency - Parallel requests
 					h2 Ruby
 					hr
-					figure
+					img(src='images/expressions_depressed.jpg')
 					hr
 					ul
 						li Mutex and Threads :(
@@ -192,7 +179,7 @@ html
 						# Very likely to get this
 						FATAL ERROR: (...) process out of memory
 				hr
-				figure
+				img(src='images/expressions_areyoukiddingme.jpg')
 
 			section
 				h3 Concurrency - Memory Usage
@@ -231,7 +218,7 @@ html
 
 						# IT WORKS!
 				hr
-				figure
+				img(src='images/expressions_ecstatic.jpg')
 
 			section(data-bespoke-state='emphatic')
 				h2 It is awesome
