--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -142,18 +142,53 @@ a
 	background: rgba(225, 225, 225, .8)
 	padding: 24px
 
+#fast-intro
+	figure
+		width: 440px;
+		height: 280px
+		background-image: url(../images/fast.png)
+		background-repeat: no-repeat
+
+#parallel-wallpaper
+	figure
+		width: 125*6px
+		height: 170*3px
+		background-image: url(../images/gopher.png)
+		background-size: 125px 170px
+
 #ruby-parallel
 	figure
-		width: 400px
-		height: 250px
-		background-image: url(../images/forever-alone.gif)
+		width: 480px
+		height: 320px
+		background-image: url(../images/suicide.png)
+		background-size: 480px 320px
+		background-repeat: no-repeat
+
+#memory-node-result
+	figure
+		width: 440px
+		height: 200px
+		background-image: url(../images/bomb.png)
+		background-repeat: no-repeat
+
+#memory-go-result
+	figure
+		width: 440px
+		height: 240px
+		background-image: url(../images/jump.png)
 		background-size: 400px 250px
 		background-repeat: no-repeat
 
-#memory-go
+#wallpaper
 	figure
-		width: 400px
-		height: 250px
-		background-image: url(../images/forever-alone.gif)
-		background-size: 400px 250px
+		width: 800px
+		height: 800px
+		background-image: url(../images/gopher-wallpaper.png)
+		background-repeat: no-repeat
+
+#gopher
+	figure
+		width: 250px
+		height: 340px
+		background-image: url(../images/gopher.png)
 		background-repeat: no-repeat
