--- a/src/index.jade
+++ b/src/index.jade
@@ -20,6 +20,10 @@ html
 				p @sebasporto
 
 			section
+				h2 Why Go use for building web application?
+
+			section#fast-intro
+				figure
 				h2 It is fast
 
 			section
@@ -97,6 +101,9 @@ html
 				hr
 				h3 190x faster than Ruby
 
+			section#parallel-wallpaper
+				figure
+
 			section
 				h2 Concurrency - Parallel requests
 				hr
@@ -106,8 +113,7 @@ html
 				div
 					h3 Concurrency - Parallel requests
 					h2 Ruby
-					hr
-					img(src='images/expressions_depressed.jpg')
+					figure
 					hr
 					ul
 						li Mutex and Threads :(
@@ -146,6 +152,11 @@ html
 
 						processConcat(x, y)
 
+			section#gopher
+				h1 &nbsp;
+				hr
+				figure
+
 			section
 				h2 Concurrency - Memory Usage
 				img(src='images/memory.png')
@@ -167,7 +178,7 @@ html
 							res.end(b);
 						}).listen(8100);
 
-			section#memory-node
+			section#memory-node-result
 				h3 Concurrency - Memory Usage
 				h2 Node.js
 				hr
@@ -178,8 +189,7 @@ html
 
 						# Very likely to get this
 						FATAL ERROR: (...) process out of memory
-				hr
-				img(src='images/expressions_areyoukiddingme.jpg')
+				figure
 
 			section
 				h3 Concurrency - Memory Usage
@@ -203,7 +213,7 @@ html
 							http.ListenAndServe(":8100", nil)
 						}
 
-			section#memory-go
+			section#memory-go-result
 				h3 Concurrency - Memory Usage
 				h2 Go
 				hr
@@ -217,12 +227,14 @@ html
 						...
 
 						# IT WORKS!
-				hr
-				img(src='images/expressions_ecstatic.jpg')
+				figure
 
 			section(data-bespoke-state='emphatic')
 				h2 It is awesome
 				h3 Try it!
+
+			section#wallpaper
+				figure
 
 			section(data-bespoke-state='emphatic')
 				h2 But there is a lot more ...
