--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -126,6 +126,9 @@ hr
 ul
   list-style: none
 
+ul.left
+	text-align: left
+
 li
   margin-bottom: 12px
   font-size: 24px
@@ -149,6 +152,14 @@ a
 		background-image: url(../images/fast.png)
 		background-repeat: no-repeat
 
+#concurrency-intro
+	figure
+		width: 480px
+		height: 320px
+		background-image: url(../images/concurrency.png)
+		background-size: 480px 320px
+		background-repeat: no-repeat
+
 #parallel-wallpaper
 	figure
 		width: 125*6px
@@ -162,6 +173,13 @@ a
 		height: 320px
 		background-image: url(../images/suicide.png)
 		background-size: 480px 320px
+		background-repeat: no-repeat
+
+#concurrency-memory
+	figure
+		width: 480px
+		height: 320px
+		background-image: url(../images/concurrency-memory.png)
 		background-repeat: no-repeat
 
 #memory-node-result
