--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -160,10 +160,10 @@ a
 		background-size: 480px 320px
 		background-repeat: no-repeat
 
-#parallel-wallpaper
+#parallel-intro
 	figure
-		width: 125*6px
-		height: 170*3px
+		width: 125*4px
+		height: 170*2px
 		background-image: url(../images/gopher.png)
 		background-size: 125px 170px
 
